--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Pancake Stack Webdeveloper Nanodegree  
+  uni: NAIT
+  year: June, 1864 &mdash; January, 1865
   # awards:
-  # summary:
+  # summary: Timelord with mechanical computing skills.
